Compilador/src/sintacticalanalyzer/byacc/y.output
   0  $accept : programa $end

   1  programa : bloque

   2  bloque : nombre_programa BEGIN sentencias END

   3  nombre_programa : ID

   4  sentencias : sentencias sentencia
   5             | sentencia

   6  sentencias_ejecutables : sentencias_ejecutables sentencia_ejecutable
   7                         | sentencia_ejecutable

   8  sentencia : sentencia_ejecutable

   9  sentencia_ejecutable : declaracion_variables
  10                       | asignacion
  11                       | impresion
  12                       | iteracion
  13                       | seleccion
  14                       | declaracion_funcion
  15                       | error

  16  declaracion_funcion : cabecera_funcion inicio_funcion cuerpo_funcion fin_funcion
  17                      | cabecera_funcion_parametro inicio_funcion cuerpo_funcion fin_funcion

  18  cabecera_funcion_parametro : tipo_funcion token_fun ID '(' tipo ID ')'
  19                             | error

  20  cabecera_funcion : tipo_funcion token_fun ID '(' ')'

  21  token_fun : FUN

  22  inicio_funcion : BEGIN

  23  cuerpo_funcion : sentencias retorno

  24  fin_funcion : END

  25  declaracion_variables : tipo variables ';'

  26  tipo : INTEGER
  27       | ULONGINT

  28  tipo_funcion : INTEGER
  29               | ULONGINT

  30  variables : variables ',' variable
  31            | variable

  32  variable : ID

  33  asignacion : ID ASIGNACION expresion ';'

  34  expresion : termino
  35            | expresion '+' termino
  36            | expresion '-' termino

  37  termino : factor
  38          | termino '*' factor
  39          | termino '/' factor

  40  factor : ID
  41         | NUMERIC_CONST
  42         | invocacion
  43         | '-' NUMERIC_CONST
  44         | ITOUL '(' expresion ')'

  45  invocacion : ID '(' parametros ')'
  46             | ID '(' ')'

  47  parametros : parametros ',' parametro
  48             | parametro

  49  parametro : ID
  50            | NUMERIC_CONST
  51            | '-' NUMERIC_CONST

  52  impresion : PRINT '(' STRING_CONST ')' ';'

  53  iteracion : inicio_while '(' condicion_while ')' DO bloque_ejecutables_while
  54            | inicio_while '(' condicion_while ')' bloque_ejecutables_while

  55  seleccion : inicio_if '(' condicion_if ')' THEN bloque_ejecutables_if_con_else ELSE bloque_ejecutables_else END_IF
  56            | inicio_if '(' condicion_if ')' THEN bloque_ejecutables_if_sin_else END_IF

  57  inicio_if : IF

  58  inicio_while : WHILE

  59  bloque_ejecutables_if_con_else : BEGIN sentencias_ejecutables END

  60  bloque_ejecutables_if_sin_else : BEGIN sentencias_ejecutables END

  61  bloque_ejecutables_else : BEGIN sentencias_ejecutables END

  62  bloque_ejecutables_while : BEGIN sentencias_ejecutables END

  63  condicion_if : expresion GREATER_EQUAL expresion
  64               | expresion LESS_EQUAL expresion
  65               | expresion NOT_EQUAL expresion
  66               | expresion '>' expresion
  67               | expresion '<' expresion
  68               | expresion '=' expresion

  69  condicion_while : expresion GREATER_EQUAL expresion
  70                  | expresion LESS_EQUAL expresion
  71                  | expresion NOT_EQUAL expresion
  72                  | expresion '>' expresion
  73                  | expresion '<' expresion
  74                  | expresion '=' expresion

  75  retorno : RETURN '(' expresion ')' ';'

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	.  error

	programa  goto 2
	bloque  goto 3
	nombre_programa  goto 4


state 1
	nombre_programa : ID .  (3)

	.  reduce 3


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	programa : bloque .  (1)

	.  reduce 1


state 4
	bloque : nombre_programa . BEGIN sentencias END  (2)

	BEGIN  shift 5
	.  error


state 5
	bloque : nombre_programa BEGIN . sentencias END  (2)

	error  shift 6
	ID  shift 7
	IF  shift 8
	PRINT  shift 9
	WHILE  shift 10
	INTEGER  shift 11
	ULONGINT  shift 12
	.  error

	sentencias  goto 13
	sentencia  goto 14
	sentencia_ejecutable  goto 15
	declaracion_variables  goto 16
	asignacion  goto 17
	impresion  goto 18
	iteracion  goto 19
	seleccion  goto 20
	declaracion_funcion  goto 21
	cabecera_funcion  goto 22
	cabecera_funcion_parametro  goto 23
	tipo_funcion  goto 24
	tipo  goto 25
	inicio_while  goto 26
	inicio_if  goto 27


state 6
	sentencia_ejecutable : error .  (15)
	cabecera_funcion_parametro : error .  (19)

	error  reduce 15
	ID  reduce 15
	IF  reduce 15
	BEGIN  reduce 19
	END  reduce 15
	PRINT  reduce 15
	WHILE  reduce 15
	RETURN  reduce 15
	INTEGER  reduce 15
	ULONGINT  reduce 15


state 7
	asignacion : ID . ASIGNACION expresion ';'  (33)

	ASIGNACION  shift 28
	.  error


state 8
	inicio_if : IF .  (57)

	.  reduce 57


state 9
	impresion : PRINT . '(' STRING_CONST ')' ';'  (52)

	'('  shift 29
	.  error


state 10
	inicio_while : WHILE .  (58)

	.  reduce 58


state 11
	tipo : INTEGER .  (26)
	tipo_funcion : INTEGER .  (28)

	ID  reduce 26
	FUN  reduce 28


state 12
	tipo : ULONGINT .  (27)
	tipo_funcion : ULONGINT .  (29)

	ID  reduce 27
	FUN  reduce 29


state 13
	bloque : nombre_programa BEGIN sentencias . END  (2)
	sentencias : sentencias . sentencia  (4)

	error  shift 6
	ID  shift 7
	IF  shift 8
	END  shift 30
	PRINT  shift 9
	WHILE  shift 10
	INTEGER  shift 11
	ULONGINT  shift 12
	.  error

	sentencia  goto 31
	sentencia_ejecutable  goto 15
	declaracion_variables  goto 16
	asignacion  goto 17
	impresion  goto 18
	iteracion  goto 19
	seleccion  goto 20
	declaracion_funcion  goto 21
	cabecera_funcion  goto 22
	cabecera_funcion_parametro  goto 23
	tipo_funcion  goto 24
	tipo  goto 25
	inicio_while  goto 26
	inicio_if  goto 27


state 14
	sentencias : sentencia .  (5)

	.  reduce 5


state 15
	sentencia : sentencia_ejecutable .  (8)

	.  reduce 8


state 16
	sentencia_ejecutable : declaracion_variables .  (9)

	.  reduce 9


state 17
	sentencia_ejecutable : asignacion .  (10)

	.  reduce 10


state 18
	sentencia_ejecutable : impresion .  (11)

	.  reduce 11


state 19
	sentencia_ejecutable : iteracion .  (12)

	.  reduce 12


state 20
	sentencia_ejecutable : seleccion .  (13)

	.  reduce 13


state 21
	sentencia_ejecutable : declaracion_funcion .  (14)

	.  reduce 14


state 22
	declaracion_funcion : cabecera_funcion . inicio_funcion cuerpo_funcion fin_funcion  (16)

	BEGIN  shift 32
	.  error

	inicio_funcion  goto 33


state 23
	declaracion_funcion : cabecera_funcion_parametro . inicio_funcion cuerpo_funcion fin_funcion  (17)

	BEGIN  shift 32
	.  error

	inicio_funcion  goto 34


state 24
	cabecera_funcion_parametro : tipo_funcion . token_fun ID '(' tipo ID ')'  (18)
	cabecera_funcion : tipo_funcion . token_fun ID '(' ')'  (20)

	FUN  shift 35
	.  error

	token_fun  goto 36


state 25
	declaracion_variables : tipo . variables ';'  (25)

	ID  shift 37
	.  error

	variables  goto 38
	variable  goto 39


state 26
	iteracion : inicio_while . '(' condicion_while ')' DO bloque_ejecutables_while  (53)
	iteracion : inicio_while . '(' condicion_while ')' bloque_ejecutables_while  (54)

	'('  shift 40
	.  error


state 27
	seleccion : inicio_if . '(' condicion_if ')' THEN bloque_ejecutables_if_con_else ELSE bloque_ejecutables_else END_IF  (55)
	seleccion : inicio_if . '(' condicion_if ')' THEN bloque_ejecutables_if_sin_else END_IF  (56)

	'('  shift 41
	.  error


state 28
	asignacion : ID ASIGNACION . expresion ';'  (33)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 46
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 29
	impresion : PRINT '(' . STRING_CONST ')' ';'  (52)

	STRING_CONST  shift 50
	.  error


state 30
	bloque : nombre_programa BEGIN sentencias END .  (2)

	.  reduce 2


state 31
	sentencias : sentencias sentencia .  (4)

	.  reduce 4


state 32
	inicio_funcion : BEGIN .  (22)

	.  reduce 22


state 33
	declaracion_funcion : cabecera_funcion inicio_funcion . cuerpo_funcion fin_funcion  (16)

	error  shift 6
	ID  shift 7
	IF  shift 8
	PRINT  shift 9
	WHILE  shift 10
	INTEGER  shift 11
	ULONGINT  shift 12
	.  error

	sentencias  goto 51
	sentencia  goto 14
	sentencia_ejecutable  goto 15
	declaracion_variables  goto 16
	asignacion  goto 17
	impresion  goto 18
	iteracion  goto 19
	seleccion  goto 20
	declaracion_funcion  goto 21
	cabecera_funcion  goto 22
	cuerpo_funcion  goto 52
	cabecera_funcion_parametro  goto 23
	tipo_funcion  goto 24
	tipo  goto 25
	inicio_while  goto 26
	inicio_if  goto 27


state 34
	declaracion_funcion : cabecera_funcion_parametro inicio_funcion . cuerpo_funcion fin_funcion  (17)

	error  shift 6
	ID  shift 7
	IF  shift 8
	PRINT  shift 9
	WHILE  shift 10
	INTEGER  shift 11
	ULONGINT  shift 12
	.  error

	sentencias  goto 51
	sentencia  goto 14
	sentencia_ejecutable  goto 15
	declaracion_variables  goto 16
	asignacion  goto 17
	impresion  goto 18
	iteracion  goto 19
	seleccion  goto 20
	declaracion_funcion  goto 21
	cabecera_funcion  goto 22
	cuerpo_funcion  goto 53
	cabecera_funcion_parametro  goto 23
	tipo_funcion  goto 24
	tipo  goto 25
	inicio_while  goto 26
	inicio_if  goto 27


state 35
	token_fun : FUN .  (21)

	.  reduce 21


state 36
	cabecera_funcion_parametro : tipo_funcion token_fun . ID '(' tipo ID ')'  (18)
	cabecera_funcion : tipo_funcion token_fun . ID '(' ')'  (20)

	ID  shift 54
	.  error


state 37
	variable : ID .  (32)

	.  reduce 32


state 38
	declaracion_variables : tipo variables . ';'  (25)
	variables : variables . ',' variable  (30)

	';'  shift 55
	','  shift 56
	.  error


state 39
	variables : variable .  (31)

	.  reduce 31


state 40
	iteracion : inicio_while '(' . condicion_while ')' DO bloque_ejecutables_while  (53)
	iteracion : inicio_while '(' . condicion_while ')' bloque_ejecutables_while  (54)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 57
	termino  goto 47
	factor  goto 48
	invocacion  goto 49
	condicion_while  goto 58


state 41
	seleccion : inicio_if '(' . condicion_if ')' THEN bloque_ejecutables_if_con_else ELSE bloque_ejecutables_else END_IF  (55)
	seleccion : inicio_if '(' . condicion_if ')' THEN bloque_ejecutables_if_sin_else END_IF  (56)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 59
	termino  goto 47
	factor  goto 48
	invocacion  goto 49
	condicion_if  goto 60


state 42
	factor : ID .  (40)
	invocacion : ID . '(' parametros ')'  (45)
	invocacion : ID . '(' ')'  (46)

	'('  shift 61
	GREATER_EQUAL  reduce 40
	LESS_EQUAL  reduce 40
	NOT_EQUAL  reduce 40
	')'  reduce 40
	';'  reduce 40
	'+'  reduce 40
	'-'  reduce 40
	'*'  reduce 40
	'/'  reduce 40
	'>'  reduce 40
	'<'  reduce 40
	'='  reduce 40


state 43
	factor : NUMERIC_CONST .  (41)

	.  reduce 41


state 44
	factor : ITOUL . '(' expresion ')'  (44)

	'('  shift 62
	.  error


state 45
	factor : '-' . NUMERIC_CONST  (43)

	NUMERIC_CONST  shift 63
	.  error


state 46
	asignacion : ID ASIGNACION expresion . ';'  (33)
	expresion : expresion . '+' termino  (35)
	expresion : expresion . '-' termino  (36)

	';'  shift 64
	'+'  shift 65
	'-'  shift 66
	.  error


state 47
	expresion : termino .  (34)
	termino : termino . '*' factor  (38)
	termino : termino . '/' factor  (39)

	'*'  shift 67
	'/'  shift 68
	GREATER_EQUAL  reduce 34
	LESS_EQUAL  reduce 34
	NOT_EQUAL  reduce 34
	')'  reduce 34
	';'  reduce 34
	'+'  reduce 34
	'-'  reduce 34
	'>'  reduce 34
	'<'  reduce 34
	'='  reduce 34


state 48
	termino : factor .  (37)

	.  reduce 37


state 49
	factor : invocacion .  (42)

	.  reduce 42


state 50
	impresion : PRINT '(' STRING_CONST . ')' ';'  (52)

	')'  shift 69
	.  error


state 51
	sentencias : sentencias . sentencia  (4)
	cuerpo_funcion : sentencias . retorno  (23)

	error  shift 6
	ID  shift 7
	IF  shift 8
	PRINT  shift 9
	WHILE  shift 10
	RETURN  shift 70
	INTEGER  shift 11
	ULONGINT  shift 12
	.  error

	sentencia  goto 31
	sentencia_ejecutable  goto 15
	declaracion_variables  goto 16
	asignacion  goto 17
	impresion  goto 18
	iteracion  goto 19
	seleccion  goto 20
	declaracion_funcion  goto 21
	cabecera_funcion  goto 22
	cabecera_funcion_parametro  goto 23
	tipo_funcion  goto 24
	tipo  goto 25
	retorno  goto 71
	inicio_while  goto 26
	inicio_if  goto 27


state 52
	declaracion_funcion : cabecera_funcion inicio_funcion cuerpo_funcion . fin_funcion  (16)

	END  shift 72
	.  error

	fin_funcion  goto 73


state 53
	declaracion_funcion : cabecera_funcion_parametro inicio_funcion cuerpo_funcion . fin_funcion  (17)

	END  shift 72
	.  error

	fin_funcion  goto 74


state 54
	cabecera_funcion_parametro : tipo_funcion token_fun ID . '(' tipo ID ')'  (18)
	cabecera_funcion : tipo_funcion token_fun ID . '(' ')'  (20)

	'('  shift 75
	.  error


state 55
	declaracion_variables : tipo variables ';' .  (25)

	.  reduce 25


state 56
	variables : variables ',' . variable  (30)

	ID  shift 37
	.  error

	variable  goto 76


state 57
	expresion : expresion . '+' termino  (35)
	expresion : expresion . '-' termino  (36)
	condicion_while : expresion . GREATER_EQUAL expresion  (69)
	condicion_while : expresion . LESS_EQUAL expresion  (70)
	condicion_while : expresion . NOT_EQUAL expresion  (71)
	condicion_while : expresion . '>' expresion  (72)
	condicion_while : expresion . '<' expresion  (73)
	condicion_while : expresion . '=' expresion  (74)

	GREATER_EQUAL  shift 77
	LESS_EQUAL  shift 78
	NOT_EQUAL  shift 79
	'+'  shift 65
	'-'  shift 66
	'>'  shift 80
	'<'  shift 81
	'='  shift 82
	.  error


state 58
	iteracion : inicio_while '(' condicion_while . ')' DO bloque_ejecutables_while  (53)
	iteracion : inicio_while '(' condicion_while . ')' bloque_ejecutables_while  (54)

	')'  shift 83
	.  error


state 59
	expresion : expresion . '+' termino  (35)
	expresion : expresion . '-' termino  (36)
	condicion_if : expresion . GREATER_EQUAL expresion  (63)
	condicion_if : expresion . LESS_EQUAL expresion  (64)
	condicion_if : expresion . NOT_EQUAL expresion  (65)
	condicion_if : expresion . '>' expresion  (66)
	condicion_if : expresion . '<' expresion  (67)
	condicion_if : expresion . '=' expresion  (68)

	GREATER_EQUAL  shift 84
	LESS_EQUAL  shift 85
	NOT_EQUAL  shift 86
	'+'  shift 65
	'-'  shift 66
	'>'  shift 87
	'<'  shift 88
	'='  shift 89
	.  error


state 60
	seleccion : inicio_if '(' condicion_if . ')' THEN bloque_ejecutables_if_con_else ELSE bloque_ejecutables_else END_IF  (55)
	seleccion : inicio_if '(' condicion_if . ')' THEN bloque_ejecutables_if_sin_else END_IF  (56)

	')'  shift 90
	.  error


state 61
	invocacion : ID '(' . parametros ')'  (45)
	invocacion : ID '(' . ')'  (46)

	ID  shift 91
	NUMERIC_CONST  shift 92
	')'  shift 93
	'-'  shift 94
	.  error

	parametros  goto 95
	parametro  goto 96


state 62
	factor : ITOUL '(' . expresion ')'  (44)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 97
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 63
	factor : '-' NUMERIC_CONST .  (43)

	.  reduce 43


state 64
	asignacion : ID ASIGNACION expresion ';' .  (33)

	.  reduce 33


state 65
	expresion : expresion '+' . termino  (35)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	termino  goto 98
	factor  goto 48
	invocacion  goto 49


state 66
	expresion : expresion '-' . termino  (36)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	termino  goto 99
	factor  goto 48
	invocacion  goto 49


state 67
	termino : termino '*' . factor  (38)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	factor  goto 100
	invocacion  goto 49


state 68
	termino : termino '/' . factor  (39)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	factor  goto 101
	invocacion  goto 49


state 69
	impresion : PRINT '(' STRING_CONST ')' . ';'  (52)

	';'  shift 102
	.  error


state 70
	retorno : RETURN . '(' expresion ')' ';'  (75)

	'('  shift 103
	.  error


state 71
	cuerpo_funcion : sentencias retorno .  (23)

	.  reduce 23


state 72
	fin_funcion : END .  (24)

	.  reduce 24


state 73
	declaracion_funcion : cabecera_funcion inicio_funcion cuerpo_funcion fin_funcion .  (16)

	.  reduce 16


state 74
	declaracion_funcion : cabecera_funcion_parametro inicio_funcion cuerpo_funcion fin_funcion .  (17)

	.  reduce 17


state 75
	cabecera_funcion_parametro : tipo_funcion token_fun ID '(' . tipo ID ')'  (18)
	cabecera_funcion : tipo_funcion token_fun ID '(' . ')'  (20)

	INTEGER  shift 104
	ULONGINT  shift 105
	')'  shift 106
	.  error

	tipo  goto 107


state 76
	variables : variables ',' variable .  (30)

	.  reduce 30


state 77
	condicion_while : expresion GREATER_EQUAL . expresion  (69)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 108
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 78
	condicion_while : expresion LESS_EQUAL . expresion  (70)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 109
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 79
	condicion_while : expresion NOT_EQUAL . expresion  (71)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 110
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 80
	condicion_while : expresion '>' . expresion  (72)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 111
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 81
	condicion_while : expresion '<' . expresion  (73)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 112
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 82
	condicion_while : expresion '=' . expresion  (74)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 113
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 83
	iteracion : inicio_while '(' condicion_while ')' . DO bloque_ejecutables_while  (53)
	iteracion : inicio_while '(' condicion_while ')' . bloque_ejecutables_while  (54)

	BEGIN  shift 114
	DO  shift 115
	.  error

	bloque_ejecutables_while  goto 116


state 84
	condicion_if : expresion GREATER_EQUAL . expresion  (63)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 117
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 85
	condicion_if : expresion LESS_EQUAL . expresion  (64)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 118
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 86
	condicion_if : expresion NOT_EQUAL . expresion  (65)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 119
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 87
	condicion_if : expresion '>' . expresion  (66)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 120
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 88
	condicion_if : expresion '<' . expresion  (67)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 121
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 89
	condicion_if : expresion '=' . expresion  (68)

	ID  shift 42
	NUMERIC_CONST  shift 43
	ITOUL  shift 44
	'-'  shift 45
	.  error

	expresion  goto 122
	termino  goto 47
	factor  goto 48
	invocacion  goto 49


state 90
	seleccion : inicio_if '(' condicion_if ')' . THEN bloque_ejecutables_if_con_else ELSE bloque_ejecutables_else END_IF  (55)
	seleccion : inicio_if '(' condicion_if ')' . THEN bloque_ejecutables_if_sin_else END_IF  (56)

	THEN  shift 123
	.  error


state 91
	parametro : ID .  (49)

	.  reduce 49


state 92
	parametro : NUMERIC_CONST .  (50)

	.  reduce 50


state 93
	invocacion : ID '(' ')' .  (46)

	.  reduce 46


state 94
	parametro : '-' . NUMERIC_CONST  (51)

	NUMERIC_CONST  shift 124
	.  error


state 95
	invocacion : ID '(' parametros . ')'  (45)
	parametros : parametros . ',' parametro  (47)

	')'  shift 125
	','  shift 126
	.  error


state 96
	parametros : parametro .  (48)

	.  reduce 48


state 97
	expresion : expresion . '+' termino  (35)
	expresion : expresion . '-' termino  (36)
	factor : ITOUL '(' expresion . ')'  (44)

	')'  shift 127
	'+'  shift 65
	'-'  shift 66
	.  error


state 98
	expresion : expresion '+' termino .  (35)
	termino : termino . '*' factor  (38)
	termino : termino . '/' factor  (39)

	'*'  shift 67
	'/'  shift 68
	GREATER_EQUAL  reduce 35
	LESS_EQUAL  reduce 35
	NOT_EQUAL  reduce 35
	')'  reduce 35
	';'  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'>'  reduce 35
	'<'  reduce 35
	'='  reduce 35


state 99
	expresion : expresion '-' termino .  (36)
	termino : termino . '*' factor  (38)
	termino : termino . '/' factor  (39)

	'*'  shift 67
	'/'  shift 68
	GREATER_EQUAL  reduce 36
	LESS_EQUAL  reduce 36
	NOT_EQUAL  reduce 36
	')'  reduce 36
	';'  reduce 36
	'+'  reduce 36
	'-'  reduce 36
	'>'  reduce 36
	'<'  reduce 36
	'='  reduce 36


state 100
	termino : termino '*' factor .  (38)

	.  reduce 38


state 101
	termino : termino '/' factor .  (39)
